--- a/todolist.html
+++ b/todolist.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik&display=swap"
+      rel="stylesheet"
+    />
     <title>To-Do List</title>
-    <link rel="stylesheet" href="todolist.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="todo-container">
-      <h1>To-Do List</h1>
-      <input type="text" id="taskInput" placeholder="Digite uma tarefa..." />
-      <button onclick="addTask()">Adicionar</button>
-      <ul id="taskList"></ul>
+    <div class="container">
+      <div class="todo-box">
+        <h1 class="title">To-do List</h1>
+        <div class="input-area">
+          <input
+            type="text"
+            id="task-input"
+            placeholder="Create your task here..."
+          />
+          <button id="add-btn">add</button>
+        </div>
+        <ul id="task-list"></ul>
+      </div>
     </div>
-
-    <script src="todolist2.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
