--- a/todolist.html
+++ b/todolist.html
@@ -1,32 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Rubik&display=swap"
-      rel="stylesheet"
-    />
     <title>To-Do List</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="todolist.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="todo-box">
-        <h1 class="title">To-do List</h1>
-        <div class="input-area">
-          <input
-            type="text"
-            id="task-input"
-            placeholder="Create your task here..."
-          />
-          <button id="add-btn">add</button>
-        </div>
-        <ul id="task-list"></ul>
-      </div>
+    <div class="todo-container">
+      <h1>To-Do List</h1>
+      <input type="text" id="taskInput" placeholder="Digite uma tarefa..." />
+      <button onclick="addTask()">Adicionar</button>
+      <ul id="taskList"></ul>
     </div>
-    <script src="script.js"></script>
+
+    <script src="todolist2.js"></script>
   </body>
 </html>
